--- a/ingress.yaml
+++ b/ingress.yaml
@@ -22,7 +22,7 @@ spec:
         backend:
           service:
             name: ghost-app-service
-            namespace: ghost  # Explicitly reference the ghost namespace
+            namespace: default  # Explicitly reference the ghost namespace
             port:
               number: 80  # Port 80 if you're exposing Ghost via service at 80
   - host: www.beatsinthe.cloud
@@ -40,7 +40,7 @@ spec:
         backend:
           service:
             name: ghost-app-service
-            namespace: ghost  # Explicitly reference the ghost namespace
+            namespace: default  # Explicitly reference the ghost namespace
             port:
               number: 80
   tls:
