--- a/argocd/argocd-app.yaml
+++ b/argocd/argocd-app.yaml
@@ -8,9 +8,9 @@ spec:
     namespace: argocd
     server: https://kubernetes.default.svc
   source:
-    path: argo-cd           # Folder in your GitHub repo containing Argo CD manifests
+    path: argo-cd 
     repoURL: https://github.com/catinahat85/CloudFiLive.git
-    targetRevision: main     # Specify the branch name
+    targetRevision: main 
   project: default
   syncPolicy:
     automated:
