--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,9 @@
-name: Build and Push Docker Image to Docker Hub
+name: Build and Push Docker Image to GitHub Container Registry
 
 on:
   push:
     branches:
-      - main  # Adjust this if you're using a different branch
+      - test  # Adjust this if you're using a different branch
 
 jobs:
   build:
@@ -18,19 +18,20 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # Step 3: Log in to Docker Hub using the stored secrets
-    - name: Log in to Docker Hub
+    # Step 3: Log in to GitHub Container Registry using GitHub token
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     # Step 4: Set the Image Tag using the current date and time (for unique versioning)
     - name: Set image tag
       run: echo "IMAGE_TAG=$(date +'%Y%m%d-%H%M')" >> $GITHUB_ENV
 
-    # Step 5: Build and push the Docker image to Docker Hub (multi-platform build)
-    - name: Build and push Docker image to Docker Hub
+    # Step 5: Build and push the Docker image to GitHub Container Registry (multi-platform build)
+    - name: Build and push Docker image to GitHub Container Registry
       uses: docker/build-push-action@v4
       with:
         context: .
@@ -38,10 +39,6 @@ jobs:
         platforms: linux/amd64,linux/arm64
         push: true
         tags: |
-          jakehazex21/my-nginx-app:${{ env.IMAGE_TAG }}
-          jakehazex21/my-nginx-app:latest
+          ghcr.io/${{ github.repository_owner }}/my-nginx-app:${{ env.IMAGE_TAG }}
+          ghcr.io/${{ github.repository_owner }}/my-nginx-app:latest
 
-
-    # Step 7: Log out from Docker Hub
-    - name: Log out from Docker Hub
-      run: docker logout
