--- a/cert-manager/beatsinthecloud-cert.yaml
+++ b/cert-manager/beatsinthecloud-cert.yaml
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: example-com-tls
-  namespace: default
+  name: cloudfi-tls
+  namespace: cert-manager
 spec:
-  secretName: beatsinthecloud-com-tls
+  secretName: cloudfi-tls-secret
   issuerRef:
-    name: letsencrypt-production
-    kind: ClusterIssuer
-  commonName: beatsinthe.cloud
+    name: letsencrypt-production 
+    kind: ClusterIssuer         
+  commonName: beatsinthe.cloud  
   dnsNames:
   - beatsinthe.cloud
   - www.beatsinthe.cloud
