--- a/cert-manager/beatsinthecloud-cert.yaml
+++ b/cert-manager/beatsinthecloud-cert.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: cloudfi-tls
-  namespace: cert-manager
+  namespace: default
 spec:
   secretName: cloudfi-tls-secret
   issuerRef:
