--- a/traefik/traefik-secret-access.yaml
+++ b/traefik/traefik-secret-access.yaml
@@ -23,6 +23,15 @@ subjects:
     name: traefik
     namespace: kube-system
 
+---
+apiVersion: helm.cattle.io/v1
+kind: HelmChart
+metadata:
+  name: traefik-crd
+  namespace: kube-system
+spec:
+  chart: https://%{KUBERNETES_API}%/static/charts/traefik-crd-25.0.3+up25.0.0.tgz
+---
 apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
@@ -35,8 +44,7 @@ spec:
   valuesContent: |-
     deployment:
       podAnnotations:
-        prometheus.io/path: /metrics
-        prometheus.io/port: "9100"
+        prometheus.io/port: "8082"
         prometheus.io/scrape: "true"
     providers:
       kubernetesIngress:
@@ -47,14 +55,14 @@ spec:
       repository: "rancher/mirrored-library-traefik"
       tag: "2.11.8"
     tolerations:
-      - key: "CriticalAddonsOnly"
-        operator: "Exists"
-      - key: "node-role.kubernetes.io/control-plane"
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "node-role.kubernetes.io/master"
-        operator: "Exists"
-        effect: "NoSchedule"
+    - key: "CriticalAddonsOnly"
+      operator: "Exists"
+    - key: "node-role.kubernetes.io/control-plane"
+      operator: "Exists"
+      effect: "NoSchedule"
+    - key: "node-role.kubernetes.io/master"
+      operator: "Exists"
+      effect: "NoSchedule"
     service:
       ipFamilyPolicy: "PreferDualStack"
     additionalArguments:
