--- a/traefik/traefik-secret-access.yaml
+++ b/traefik/traefik-secret-access.yaml
@@ -32,6 +32,15 @@ metadata:
 spec:
   chart: https://%{KUBERNETES_API}%/static/charts/traefik-crd-25.0.3+up25.0.0.tgz
 ---
+---
+apiVersion: helm.cattle.io/v1
+kind: HelmChart
+metadata:
+  name: traefik-crd
+  namespace: kube-system
+spec:
+  chart: https://%{KUBERNETES_API}%/static/charts/traefik-crd-25.0.3+up25.0.0.tgz
+---
 apiVersion: helm.cattle.io/v1
 kind: HelmChart
 metadata:
@@ -65,4 +74,6 @@ spec:
       effect: "NoSchedule"
     service:
       ipFamilyPolicy: "PreferDualStack"
-
+    additionalArguments:
+      - "--defaultCertificate.certFile="
+      - "--defaultCertificate.keyFile="
