--- a/ingress.yaml
+++ b/ingress.yaml
@@ -2,12 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: my-ingress
-  namespace: default
+  namespace: default  # Assuming the ingress is in the 'default' namespace
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
     argocd.argoproj.io/compare-options: IgnoreExtraneous
-    traefik.ingress.kubernetes.io/router.tls: "true"
-    traefik.ingress.kubernetes.io/router.tls.certresolver: default
 spec:
   rules:
   - host: beatsinthe.cloud
